# CV

./: README.md
GDD/: PFTD_GDD.docx  README.md
Music/: links
QA_tester_game_bug_report/: README.md
SOUNDHOLE/: README.md
coding_projects/: CMakeLists.txt  README.md
coding_projects/Beam_Fight/: CMakeLists.txt  settings.txt
coding_projects/Beam_Fight/code/: beamfight.cpp  bulletcollisiontype.h  bulletcollisiontypeenum.h  canupdate.h  clear.h  collide.h  collisiondetector.h  collisiontype.h  drawbeamfight.h  drawborders.h  drawspacesonarena.h  endscreen.h  globalsettings.cpp  globalsettings.h  hitplayer.h  isplayerhitbybullet.h  movebulletonpolewalki.h  player.cpp  player.h  playersinput.h  pocisk.cpp  pocisk.h  pociskmanager.cpp  pociskmanager.h  punishfortoomanybulletchanges.h  readsettingsfromfile.h  setuppolewalki.h  showpositionoflastbullet.h  statystyki.h  typpocisku.h  updateenum.h  whichplayerenum.h
coding_projects/Grrnd/: CMakeLists.txt  grrnd.cpp
coding_projects/Guitar_Note_Helper/: CMakeLists.txt  guitarnotehelper.cpp  strings.cpp  strings.h
coding_projects/Run_Build_Fight/: CMakeLists.txt  runbuildfight.cpp
music/: README.md  links
sound_design_showcase/: README.md
